--- a/analysis/real_data_coloc.Rmd
+++ b/analysis/real_data_coloc.Rmd
@@ -73,32 +73,8 @@ get_top_mts_ctwas <- function(ctwasf,regions){
 }
 
 get_results <- function(gwas_id,gwas_name){
-  finemap_res <- readRDS(paste0("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/",gwas_id,"/",gwas_id,".finemap_regions_res.RDS"))
-  finemap_res <- finemap_res$finemap_res
-  region_singals <- unique(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="SNP"),]$region_id)
   tissues <- GWAS_tissues[[gwas_id]]
-  
-  ctwasfs <- c(paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/expression_weights/",gwas_id,"/",gwas_id,"_",tissues,".finemap_regions_res.RDS"),
-               paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/splicing_weights/",gwas_id,"/",gwas_id,"_",tissues,".finemap_regions_res.RDS"))
-
-  ctwas_mts <- data.frame()
-  for(i in ctwasfs){
-    ctwas_mts <- rbind(ctwas_mts,get_top_mts_ctwas(i,region_singals))
-  }
-
-  ctwas_eQTL_mts <- data.frame()
-  for(i in 1:5){
-    ctwas_eQTL_mts <- rbind(ctwas_eQTL_mts,get_top_mts_ctwas(ctwasfs[i],region_singals))
-  }
-  num_ctwas_eQTL_mts <- dim(ctwas_eQTL_mts)[1]
-
-  ctwas_sQTL_mts <- data.frame()
-  for(i in 6:10){
-    ctwas_sQTL_mts <- rbind(ctwas_sQTL_mts,get_top_mts_ctwas(ctwasfs[i],region_singals))
-  }
-  num_ctwas_sQTL_mts <- dim(ctwas_sQTL_mts)[1]
-  
-  outputdir = paste0("/project/xinhe/shengqian/coloc_GWAS_analysis/data/",gwas_name,"_coloc/")
+  outputdir = paste0("/project/xinhe/shengqian/coloc_GWAS_analysis/data_test/",gwas_name,"_coloc/")
   weight_tags <- paste0("weight",1:10)
   colocfs <- paste0(outputdir, gwas_name, "_",weight_tags, ".coloc_res.RDS")
   
@@ -113,64 +89,72 @@ get_results <- function(gwas_id,gwas_name){
                      get_top_mts_coloc(colocfs[9], paste0(tissues[5],"_eQTL")),
                      get_top_mts_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
   
-  coloc_eQTL_mts <- rbind(get_top_mts_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_mts_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_mts_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_mts_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_mts_coloc(colocfs[9], paste0(tissues[5],"_eQTL")))
-
-  num_coloc_eQTL_mts <- dim(coloc_eQTL_mts[coloc_eQTL_mts$PP4>0.8,])[1]
-
-  coloc_sQTL_mts <- rbind(get_top_mts_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_mts_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_mts_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_mts_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_mts_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-
-  num_coloc_sQTL_mts <- dim(coloc_sQTL_mts[coloc_sQTL_mts$PP4>0.8,])[1]
+  coloc_mts <- coloc_mts[coloc_mts$PP4>0.8,]
+  num_coloc_gene <- length(unique(coloc_mts$gene_name))
   
+  library(EnsDb.Hsapiens.v86)
+  ens_db <- EnsDb.Hsapiens.v86
+  weights <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/SBP-ukb-a-360/SBP-ukb-a-360.preprocessed.weights.RDS")
+  mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
   finemap_res <- readRDS(paste0("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/",gwas_id,"/",gwas_id,".finemap_regions_res.RDS"))
-  finemap_res <- finemap_res$finemap_res
-  finemap_res <- finemap_res[finemap_res$id %in% coloc_mts$id,]
-  finemap_res <- merge(finemap_res,coloc_mts,by = "id")
-  finemap_res <- finemap_res[(finemap_res$susie_pip>0.8 | finemap_res$PP4>0.8),]
-  finemap_res$susie_pip <- round(finemap_res$susie_pip,4)
-  finemap_res$PP4 <- round(finemap_res$PP4,4)
-  finemap_res <- finemap_res[order(finemap_res$region_id),]
-  finemap_res <- finemap_res[,c("id","region_id","susie_pip","cs","PP4","causalSNP")]
-
-  num_multi_ctwas_mts <- dim(finemap_res[finemap_res$susie_pip>0.8 & finemap_res$cs!=0,])[1]
-  num_single_ctwas_mts <- dim(ctwas_mts)[1]
-  num_coloc_mts <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
-
+  finemap_res <- finemap_res$susie_alpha_res
+  finemap_res <- anno_susie_alpha_res(finemap_res,
+                                      mapping_table = mapping_predictdb,
+                                      map_by = "molecular_id",
+                                      drop_unmapped = TRUE)
   
-  coloc_data <- as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id))
-  multictwas_data <- as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id))
-
+  combined_pip <- combine_gene_pips(finemap_res,
+                                    group_by = "gene_name",
+                                    by = "type",
+                                    method = "combine_cs",
+                                    filter_cs = TRUE,
+                                    include_cs_id = TRUE)
+  
+  combined_pip$region_id <- sapply(combined_pip$combined_cs_id,function(x){unlist(strsplit(x,"[.]"))[1]})
+  combined_pip <- combined_pip[combined_pip$combined_pip>0.8,]
+  
+  num_multi_ctwas_gene <- length(combined_pip$gene_name)
+  
+  region_singals <- unique(combined_pip$region_id)
+  num_coloc_ctwas_gene <- length(unique(coloc_mts[coloc_mts$region_id %in% region_singals, ]$gene_name))
+  
+  coloc_data <- as.vector(table(unique(coloc_mts[,c("gene_name","region_id")])$region_id))
+  multictwas_data <- as.vector(table(unique(combined_pip$region_id)))
+  
   # Combine data into a data frame
   df <- data.frame(
     value = c(coloc_data, multictwas_data),
     group = c(rep("Coloc",length(coloc_data)),rep("Multi-cTWAS",length(multictwas_data)))
   )
-
-  p <- ggplot(df, aes(x = value, fill = group)) +
+  
+  p1 <- ggplot(df, aes(x = value, fill = group)) +
     geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
     scale_fill_manual(values = c("blue", "red")) +
     labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
   
-  return(list("num_coloc_eQTL_mts" = num_coloc_eQTL_mts,
-              "num_coloc_sQTL_mts" = num_coloc_sQTL_mts,
-              "num_ctwas_eQTL_mts" = num_ctwas_eQTL_mts,
-              "num_ctwas_sQTL_mts" = num_ctwas_sQTL_mts,
-              "num_multi_ctwas_mts" = num_multi_ctwas_mts,
-              "num_single_ctwas_mts" = num_single_ctwas_mts,
-              "num_coloc_mts" = num_coloc_mts,
-              "p" = p))
+  ctwas_coloc_data <- coloc_mts[coloc_mts$region_id %in% region_singals, ]
+  ctwas_coloc_data <- as.vector(table(unique(ctwas_coloc_data[,c("gene_name","region_id")])$region_id))
+  # Combine data into a data frame
+  df <- data.frame(
+    value = c(ctwas_coloc_data, multictwas_data),
+    group = c(rep("Coloc",length(ctwas_coloc_data)),rep("Multi-cTWAS",length(multictwas_data)))
+  )
+  
+  p2 <- ggplot(df, aes(x = value, fill = group)) +
+    geom_histogram(position = "identity", alpha = 0.5, bins = max(coloc_data)) +
+    scale_fill_manual(values = c("blue", "red")) +
+    labs(title = gwas_id, x = "Value", y = "Frequency", fill = "Dataset") + theme_minimal()
+  
+  return(list("num_coloc_gene" = num_coloc_gene,
+              "num_coloc_ctwas_gene" = num_coloc_ctwas_gene,
+              "num_multi_ctwas_gene" = num_multi_ctwas_gene,
+              "p1" = p1,
+              "p2" = p2))
 }
 ```
 
 
-```{r}
+```{r echo=FALSE}
 LDL_results <- get_results("LDL-ukb-d-30780_irnt","LDL")
 WBC_results <- get_results("WBC-ieu-b-30","WBC")
 SBP_results <- get_results("SBP-ukb-a-360","SBP")
@@ -178,82 +162,50 @@ SCZ_results <- get_results("SCZ-ieu-b-5102","SCZ")
 IBD_results <- get_results("IBD-ebi-a-GCST004131","IBD")
 ```
 
-### number of molecular traits identified by each method
+### number of genes identified by each method
 ```{r echo=FALSE}
 library(ggplot2) 
 
-gfg <- data.frame(x = c(LDL_results$num_multi_ctwas_mts,
-                        LDL_results$num_single_ctwas_mts,
-                        LDL_results$num_coloc_mts,
-                        #WBC_results$num_multi_ctwas_mts,
-                        #WBC_results$num_single_ctwas_mts,
-                        #WBC_results$num_coloc_mts,
-                        SBP_results$num_multi_ctwas_mts,
-                        SBP_results$num_single_ctwas_mts,
-                        SBP_results$num_coloc_mts,
-                        SCZ_results$num_multi_ctwas_mts,
-                        SCZ_results$num_single_ctwas_mts,
-                        SCZ_results$num_coloc_mts,
-                        IBD_results$num_multi_ctwas_mts,
-                        IBD_results$num_single_ctwas_mts,
-                        IBD_results$num_coloc_mts),  
-                  grp = rep(c("LDL","SBP","SCZ","IBD"),each=3),
-                  subgroup = c("multi-ctwas","single-ctwas","coloc")) 
+gfg <- data.frame(x = c(LDL_results$num_multi_ctwas_gene,
+                        LDL_results$num_coloc_gene,
+                        LDL_results$num_coloc_ctwas_gene,
+                        WBC_results$num_multi_ctwas_gene,
+                        WBC_results$num_coloc_gene,
+                        WBC_results$num_coloc_ctwas_gene,
+                        SBP_results$num_multi_ctwas_gene,
+                        SBP_results$num_coloc_gene,
+                        SBP_results$num_coloc_ctwas_gene,
+                        SCZ_results$num_multi_ctwas_gene,
+                        SCZ_results$num_coloc_gene,
+                        SCZ_results$num_coloc_ctwas_gene,
+                        IBD_results$num_multi_ctwas_gene,
+                        IBD_results$num_coloc_gene,
+                        IBD_results$num_coloc_ctwas_gene),  
+                  grp = rep(c("LDL","WBC","SBP","SCZ","IBD"),each=3),
+                  subgroup = c("multi-ctwas","coloc","coloc-ctwas-locus")) 
 
-gfg$subgroup <- factor(gfg$subgroup,levels=c("multi-ctwas","single-ctwas","coloc"))
+gfg$subgroup <- factor(gfg$subgroup,levels=c("multi-ctwas","coloc","coloc-ctwas-locus"))
 
 ggplot(gfg,aes(x = grp, y =x, fill = subgroup)) + 
   geom_bar(stat = "identity", position = "dodge") 
 ```
 
-### number of molecular traits identified by coloc through eQTL and sQTL
+### compare number of genes per locus
 ```{r echo=FALSE}
-gfg <- data.frame(x = c(LDL_results$num_coloc_eQTL_mts,
-                        LDL_results$num_coloc_sQTL_mts,
-                        #WBC_results$num_coloc_eQTL_mts,
-                        #WBC_results$num_coloc_sQTL_mts,
-                        SBP_results$num_coloc_eQTL_mts,
-                        SBP_results$num_coloc_sQTL_mts,
-                        SCZ_results$num_coloc_eQTL_mts,
-                        SCZ_results$num_coloc_sQTL_mts,
-                        IBD_results$num_coloc_eQTL_mts,
-                        IBD_results$num_coloc_sQTL_mts),
-                  grp = rep(c("LDL","SBP","SCZ","IBD"),each=2),
-                  subgroup = c("eQTL","sQTL")) 
-
-gfg$subgroup <- factor(gfg$subgroup,levels=c("eQTL","sQTL"))
-
-ggplot(gfg,aes(x = grp, y =x, fill = subgroup)) + 
-  geom_bar(stat = "identity", position = "dodge") 
+LDL_results$p1
+WBC_results$p1
+SBP_results$p1
+SCZ_results$p1
+IBD_results$p1
 ```
 
-### number of molecular traits identified by single-ctwas through eQTL and sQTL
+### compare number of genes per locus (locus with multi-ctwas signals)
 ```{r echo=FALSE}
-gfg <- data.frame(x = c(LDL_results$num_ctwas_eQTL_mts,
-                        LDL_results$num_ctwas_sQTL_mts,
-                        WBC_results$num_ctwas_eQTL_mts,
-                        WBC_results$num_ctwas_sQTL_mts,
-                        SBP_results$num_ctwas_eQTL_mts,
-                        SBP_results$num_ctwas_sQTL_mts,
-                        SCZ_results$num_ctwas_eQTL_mts,
-                        SCZ_results$num_ctwas_sQTL_mts,
-                        IBD_results$num_ctwas_eQTL_mts,
-                        IBD_results$num_ctwas_sQTL_mts),
-                  grp = rep(c("LDL","WBC","SBP","SCZ","IBD"),each=2),
-                  subgroup = c("eQTL","sQTL")) 
-
-gfg$subgroup <- factor(gfg$subgroup,levels=c("eQTL","sQTL"))
-
-ggplot(gfg,aes(x = grp, y =x, fill = subgroup)) + 
-  geom_bar(stat = "identity", position = "dodge") 
-```
-
-```{r}
-LDL_results$p
-WBC_results$p
-SBP_results$p
-SCZ_results$p
-IBD_results$p
+LDL_results$p2
+WBC_results$p2
+SBP_results$p2
+SCZ_results$p2
+IBD_results$p2
 ```
 
 
@@ -289,467 +241,3 @@ make_locusplot(finemap_res_multi,
                panel.heights = c(4, 4, 1, 4))
 dev.off()
 ```
-
-### LDL
-```{r, echo=FALSE, eval=FALSE}
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.finemap_regions_res.RDS")
-finemap_res <- finemap_res$finemap_res
-region_singals <- unique(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="SNP"), ]$region_id)
-
-tissues <- c("Liver","Spleen","Esophagus_Gastroesophageal_Junction","Esophagus_Muscularis","Esophagus_Mucosa")
-
-
-ctwasfs <- c(paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/expression_weights/","LDL-ukb-d-30780_irnt","/","LDL-ukb-d-30780_irnt","_",tissues,".finemap_regions_res.RDS"),
-             paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/splicing_weights/","LDL-ukb-d-30780_irnt","/","LDL-ukb-d-30780_irnt","_",tissues,".finemap_regions_res.RDS"))
-
-ctwas_mts <- data.frame()
-for(i in ctwasfs){
-  ctwas_mts <- rbind(ctwas_mts,get_top_mts_ctwas(i,region_singals))
-}
-
-ctwas_eQTL_mts <- data.frame()
-for(i in 1:5){
-  ctwas_eQTL_mts <- rbind(ctwas_eQTL_mts,get_top_mts_ctwas(ctwasfs[i],region_singals))
-}
-num_ctwas_eQTL_mts <- dim(ctwas_eQTL_mts)[1]
-
-ctwas_sQTL_mts <- data.frame()
-for(i in 6:10){
-  ctwas_sQTL_mts <- rbind(ctwas_sQTL_mts,get_top_mts_ctwas(ctwasfs[i],region_singals))
-}
-num_ctwas_sQTL_mts <- dim(ctwas_sQTL_mts)[1]
-
-
-runtag = "LDL"
-outputdir = "/project/xinhe/shengqian/coloc_GWAS_analysis/data/LDL_coloc/"
-weight_tags <- paste0("weight",1:10)
-colocfs <- paste0(outputdir, runtag, "_",weight_tags, ".coloc_res.RDS")
-
-coloc_mts <- rbind(get_top_mts_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_mts_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_mts_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_mts_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_mts_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_mts_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_mts_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_mts_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_mts_coloc(colocfs[9], paste0(tissues[5],"_eQTL")),
-                     get_top_mts_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-  
-coloc_eQTL_mts <- rbind(get_top_mts_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_mts_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_mts_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_mts_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_mts_coloc(colocfs[9], paste0(tissues[5],"_eQTL")))
-
-num_coloc_eQTL_mts <- dim(coloc_eQTL_mts[coloc_eQTL_mts$PP4>0.8,])[1]
-
-coloc_sQTL_mts <- rbind(get_top_mts_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_mts_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_mts_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_mts_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_mts_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-
-#length(coloc_genes)
-
-library(EnsDb.Hsapiens.v86)
-ens_db <- EnsDb.Hsapiens.v86
-weights <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.preprocessed.weights.RDS")
-mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.finemap_regions_res.RDS")
-finemap_res <- finemap_res$finemap_res
-snp_map <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/LD_region_info/snp_map.RDS")
-finemap_res <- anno_finemap_res(finemap_res,
-                                snp_map = snp_map,
-                                mapping_table = mapping_predictdb,
-                                add_gene_annot = TRUE,
-                                map_by = "molecular_id",
-                                drop_unmapped = TRUE,
-                                add_position = TRUE,
-                                use_gene_pos = "mid")
-
-#finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.finemap_regions_res.RDS")
-#finemap_res <- finemap_res$finemap_res
-
-finemap_res <- finemap_res[finemap_res$id %in% coloc_mts$id,]
-finemap_res <- merge(finemap_res,coloc_mts,by = "id")
-finemap_res <- finemap_res[(finemap_res$susie_pip>0.8 | finemap_res$PP4>0.8),]
-finemap_res$susie_pip <- round(finemap_res$susie_pip,4)
-finemap_res$PP4 <- round(finemap_res$PP4,4)
-finemap_res <- finemap_res[order(finemap_res$region_id),]
-finemap_res <- finemap_res[,c("id","gene_name","region_id","susie_pip","cs","PP4","causalSNP")]
-
-num_multi_ctwas_genes <- dim(finemap_res[finemap_res$susie_pip>0.8 & finemap_res$cs!=0,])[1]
-num_single_ctwas_genes <- dim(ctwas_genes)[1]
-num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
-
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.finemap_regions_res.RDS")
-finemap_res <- finemap_res$susie_alpha_res
-finemap_res <- anno_susie_alpha_res(finemap_res,
-                           mapping_table = mapping_predictdb,
-                           map_by = "molecular_id",
-                           drop_unmapped = TRUE)
-combined_pip_by_type <- combine_gene_pips(finemap_res,
-                                          group_by = "gene_name",
-                                          by = "type",
-                                          method = "combine_cs",
-                                          filter_cs = TRUE)
-
-coloc_data <- as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id))
-multictwas_data <- as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id))
-```
-
-### WBC
-```{r, echo=FALSE, eval=FALSE}
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_E/WBC-ieu-b-30/WBC-ieu-b-30.finemap_regions_res.RDS")
-finemap_res <- finemap_res$finemap_res
-region_singals <- unique(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="SNP"), ]$region_id)
-
-tissues <- c("Whole_Blood","Cells_Cultured_fibroblasts","Esophagus_Muscularis","Pancreas","Nerve_Tibial")
-
-
-ctwasfs <- c(paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/expression_weights/","LDL-ukb-d-30780_irnt","/","LDL-ukb-d-30780_irnt","_",tissues,".finemap_regions_res.RDS"),
-             paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/splicing_weights/","LDL-ukb-d-30780_irnt","/","LDL-ukb-d-30780_irnt","_",tissues,".finemap_regions_res.RDS"))
-
-ctwas_mts <- data.frame()
-for(i in ctwasfs){
-  ctwas_mts <- rbind(ctwas_mts,get_top_mts_ctwas(i,region_singals))
-}
-
-ctwas_eQTL_mts <- data.frame()
-for(i in 1:5){
-  ctwas_eQTL_mts <- rbind(ctwas_eQTL_mts,get_top_mts_ctwas(ctwasfs[i],region_singals))
-}
-num_ctwas_eQTL_mts <- dim(ctwas_eQTL_mts)[1]
-
-ctwas_sQTL_mts <- data.frame()
-for(i in 6:10){
-  ctwas_sQTL_mts <- rbind(ctwas_sQTL_mts,get_top_mts_ctwas(ctwasfs[i],region_singals))
-}
-num_ctwas_sQTL_mts <- dim(ctwas_sQTL_mts)[1]
-
-
-runtag = "WBC"
-outputdir = "/project/xinhe/shengqian/coloc_GWAS_analysis/data_E/WBC_coloc/"
-weight_tags <- paste0("weight",1:10)
-colocfs <- paste0(outputdir, runtag, "_",weight_tags, ".coloc_res.RDS")
-
-coloc_mts <- rbind(get_top_mts_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_mts_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_mts_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_mts_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_mts_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_mts_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_mts_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_mts_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_mts_coloc(colocfs[9], paste0(tissues[5],"_eQTL")),
-                     get_top_mts_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-#coloc_eQTL_mts
-coloc_mts <- rbind(get_top_mts_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_mts_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_mts_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_mts_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_mts_coloc(colocfs[9], paste0(tissues[5],"_eQTL")))
-
-num_coloc_eQTL_mts <- dim(coloc_eQTL_mts[coloc_eQTL_mts$PP4>0.8,])[1]
-
-coloc_sQTL_mts <- rbind(get_top_mts_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_mts_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_mts_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_mts_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_mts_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-
-#length(coloc_genes)
-
-library(EnsDb.Hsapiens.v86)
-ens_db <- EnsDb.Hsapiens.v86
-weights <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_E/WBC-ieu-b-30/WBC-ieu-b-30.preprocessed.weights.RDS")
-mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_E/WBC-ieu-b-30/WBC-ieu-b-30.finemap_regions_res.RDS")
-finemap_res <- finemap_res$finemap_res
-snp_map <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/LD_region_info/snp_map.RDS")
-finemap_res <- anno_finemap_res(finemap_res,
-                                snp_map = snp_map,
-                                mapping_table = mapping_predictdb,
-                                add_gene_annot = TRUE,
-                                map_by = "molecular_id",
-                                drop_unmapped = TRUE,
-                                add_position = TRUE,
-                                use_gene_pos = "mid")
-
-#finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.finemap_regions_res.RDS")
-#finemap_res <- finemap_res$finemap_res
-
-finemap_res <- finemap_res[finemap_res$id %in% coloc_mts$id,]
-finemap_res <- merge(finemap_res,coloc_mts,by = "id")
-finemap_res <- finemap_res[(finemap_res$susie_pip>0.8 | finemap_res$PP4>0.8),]
-finemap_res$susie_pip <- round(finemap_res$susie_pip,4)
-finemap_res$PP4 <- round(finemap_res$PP4,4)
-finemap_res <- finemap_res[order(finemap_res$region_id),]
-finemap_res <- finemap_res[,c("id","gene_name","region_id","susie_pip","cs","PP4","causalSNP")]
-
-table(unique(finemap_res[finemap_res$PP4>0.8,c("gene_name","region_id")])$region_id)
-length(unique(finemap_res[finemap_res$PP4>0.8,"gene_name"]))
-
-num_multi_ctwas_genes <- dim(finemap_res[finemap_res$susie_pip>0.8 & finemap_res$cs!=0,])[1]
-num_single_ctwas_genes <- dim(ctwas_genes)[1]
-num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
-
-susie_alpha_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_E/WBC-ieu-b-30/WBC-ieu-b-30.finemap_regions_res.RDS")
-susie_alpha_res <- susie_alpha_res$susie_alpha_res
-susie_alpha_res <- anno_susie_alpha_res(susie_alpha_res,
-                           mapping_table = mapping_predictdb,
-                           map_by = "molecular_id",
-                           drop_unmapped = TRUE)
-
-combined_pip_by_type <- combine_gene_pips(susie_alpha_res,
-                                          group_by = "gene_name",
-                                          by = "type",
-                                          method = "combine_cs",
-                                          filter_cs = TRUE)
-
-aa <- combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,c("gene_name","combined_pip")]
-finemap_res <- merge(finemap_res,aa,by = "gene_name")
-bb <- finemap_res[,c("gene_name","molecular_id","combined_pip","chrom","start")]
-bb <- unique(bb)
-
-
-cc <- addFilter(ens_db, GeneNameFilter(aa$gene_name))
-zz <- data.frame(genes(cc, filter = ~ gene_biotype=="protein_coding"))
-seqnames <- 1:22
-
-
-aa <- unique(combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,"gene_name"])
-table(unique(finemap_res[finemap_res$gene_name %in% aa, c("gene_name","region_id")])$region_id)
-
-coloc_data <- as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id))
-multictwas_data <- as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id))
-```
-
-### SBP
-```{r, echo=FALSE, eval=FALSE}
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/SBP-ukb-a-360/SBP-ukb-a-360.finemap_regions_res.RDS")
-finemap_res <- finemap_res$finemap_res
-region_singals <- unique(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="SNP"), ]$region_id)
-
-tissues <- c("Artery_Aorta","Brain_Cortex","Artery_Tibial","Cells_Cultured_fibroblasts","Brain_Cerebellar_Hemisphere")
-
-
-runtag = "SBP"
-outputdir = "/project/xinhe/shengqian/coloc_GWAS_analysis/data/SBP_coloc/"
-weight_tags <- paste0("weight",1:10)
-colocfs <- paste0(outputdir, runtag, "_",weight_tags, ".coloc_res.RDS")
-
-coloc_mts <- rbind(get_top_mts_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_mts_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_mts_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_mts_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_mts_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_mts_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_mts_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_mts_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_mts_coloc(colocfs[9], paste0(tissues[5],"_eQTL")),
-                     get_top_mts_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-  
-coloc_eQTL_mts <- rbind(get_top_mts_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_mts_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_mts_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_mts_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_mts_coloc(colocfs[9], paste0(tissues[5],"_eQTL")))
-
-num_coloc_eQTL_mts <- dim(coloc_eQTL_mts[coloc_eQTL_mts$PP4>0.8,])[1]
-
-coloc_sQTL_mts <- rbind(get_top_mts_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_mts_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_mts_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_mts_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_mts_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-
-#length(coloc_genes)
-
-library(EnsDb.Hsapiens.v86)
-ens_db <- EnsDb.Hsapiens.v86
-weights <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/SBP-ukb-a-360/SBP-ukb-a-360.preprocessed.weights.RDS")
-mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_E_S_M_mapping.RDS")
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/SBP-ukb-a-360/SBP-ukb-a-360.finemap_regions_res.RDS")
-finemap_res <- finemap_res$finemap_res
-snp_map <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/LD_region_info/snp_map.RDS")
-finemap_res <- anno_finemap_res(finemap_res,
-                                snp_map = snp_map,
-                                mapping_table = mapping_predictdb,
-                                add_gene_annot = TRUE,
-                                map_by = "molecular_id",
-                                drop_unmapped = TRUE,
-                                add_position = TRUE,
-                                use_gene_pos = "mid")
-
-#finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results/LDL-ukb-d-30780_irnt/LDL-ukb-d-30780_irnt.finemap_regions_res.RDS")
-#finemap_res <- finemap_res$finemap_res
-
-finemap_res <- finemap_res[finemap_res$id %in% coloc_mts$id,]
-finemap_res <- merge(finemap_res,coloc_mts,by = "id")
-finemap_res <- finemap_res[(finemap_res$susie_pip>0.8 | finemap_res$PP4>0.8),]
-finemap_res$susie_pip <- round(finemap_res$susie_pip,4)
-finemap_res$PP4 <- round(finemap_res$PP4,4)
-finemap_res <- finemap_res[order(finemap_res$region_id),]
-finemap_res <- finemap_res[,c("id","gene_name","region_id","susie_pip","cs","PP4","causalSNP")]
-
-
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results_ES/SBP-ukb-a-360/SBP-ukb-a-360.finemap_regions_res.RDS")
-finemap_res <- finemap_res$susie_alpha_res
-finemap_res <- anno_susie_alpha_res(finemap_res,
-                           mapping_table = mapping_predictdb,
-                           map_by = "molecular_id",
-                           drop_unmapped = TRUE)
-
-combined_pip_by_type <- combine_gene_pips(finemap_res,
-                                          group_by = "gene_name",
-                                          by = "type",
-                                          method = "combine_cs",
-                                          filter_cs = TRUE)
-
-aa <- unique(combined_pip_by_type[combined_pip_by_type$combined_pip>0.8,"gene_name"])
-table(unique(finemap_res[finemap_res$gene_name %in% aa, c("gene_name","region_id")])$region_id)
-
-coloc_data <- as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id))
-multictwas_data <- as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id))
-```
-
-### SCZ
-```{r, echo=FALSE, eval=FALSE}
-trait <- "SCZ-ieu-b-5102"
-finemap_res <- readRDS(paste0("/project/xinhe/shengqian/ctwas_GWAS_analysis/results/",trait,"/",trait,".finemap_regions_res.RDS"))
-finemap_res <- finemap_res$finemap_res
-region_singals <- unique(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="SNP") & (finemap_res$type!="stQTL"),]$region_id)
-
-tissues <- c("Brain_Hippocampus","Brain_Cerebellum","Brain_Cerebellar_Hemisphere","Brain_Nucleus_accumbens_basal_ganglia","Brain_Cortex")
-
-
-ctwasfs <- c(paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/expression_weights/",trait,"/",trait,"_",tissues,".finemap_regions_res.RDS"),
-             paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/splicing_weights/",trait,"/",trait,"_",tissues,".finemap_regions_res.RDS"))
-
-ctwas_genes <- data.frame()
-for(i in ctwasfs){
-  ctwas_genes <- rbind(ctwas_genes,get_top_genes_ctwas(i,region_singals))
-}
-
-
-runtag = "SCZ"
-outputdir = "/project/xinhe/shengqian/cTWAS_analysis/data/SCZ_coloc/"
-weight_tags <- paste0("weight",1:10)
-colocfs <- paste0(outputdir, runtag, "_",weight_tags, ".coloc_res.RDS")
-
-coloc_genes <- rbind(get_top_genes_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_genes_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_genes_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_genes_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_genes_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_genes_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_genes_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_genes_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_genes_coloc(colocfs[9], paste0(tissues[5],"_eQTL")),
-                     get_top_genes_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-
-coloc_eQTL_genes <- rbind(get_top_genes_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_genes_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_genes_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_genes_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_genes_coloc(colocfs[9], paste0(tissues[5],"_eQTL")))
-
-#dim(coloc_eQTL_genes[coloc_eQTL_genes$PP4>0.8,])[1]
-
-coloc_sQTL_genes <- rbind(get_top_genes_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_genes_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_genes_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_genes_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_genes_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-
-#dim(coloc_sQTL_genes[coloc_sQTL_genes$PP4>0.8,])[1]
-
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results/SCZ-ieu-b-5102/SCZ-ieu-b-5102.finemap_regions_res.RDS")
-finemap_res <- finemap_res$finemap_res
-finemap_res <- finemap_res[finemap_res$id %in% coloc_genes$id,]
-finemap_res <- merge(finemap_res,coloc_genes,by = "id")
-finemap_res <- finemap_res[(finemap_res$susie_pip>0.8 | finemap_res$PP4>0.8),]
-finemap_res$susie_pip <- round(finemap_res$susie_pip,4)
-finemap_res$PP4 <- round(finemap_res$PP4,4)
-finemap_res <- finemap_res[order(finemap_res$region_id),]
-finemap_res <- finemap_res[,c("id","region_id","susie_pip","cs","PP4","causalSNP")]
-
-num_multi_ctwas_genes <- dim(finemap_res[finemap_res$susie_pip>0.8 & finemap_res$cs!=0,])[1]
-num_single_ctwas_genes <- dim(ctwas_genes)[1]
-num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
-
-hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "coloc",ylim = c(0,15),xlim = c(0,5),breaks = 2)
-hist(as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "multi-ctwas",add=TRUE,col='red',breaks = 1)
-```
-
-### IBD
-```{r, echo=FALSE, eval=FALSE}
-trait <- "IBD-ebi-a-GCST004131"
-finemap_res <- readRDS(paste0("/project/xinhe/shengqian/ctwas_GWAS_analysis/results/",trait,"/",trait,".finemap_regions_res.RDS"))
-finemap_res <- finemap_res$finemap_res
-region_singals <- unique(finemap_res[(finemap_res$susie_pip>0.8) & (finemap_res$type!="SNP") & (finemap_res$type!="stQTL"),]$region_id)
-
-tissues <- c("Whole_Blood","Colon_Transverse","Esophagus_Muscularis","Artery_Coronary","Brain_Nucleus_accumbens_basal_ganglia")
-
-
-ctwasfs <- c(paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/expression_weights/",trait,"/",trait,"_",tissues,".finemap_regions_res.RDS"),
-             paste0("/project/xinhe/shengqian/single_tissue_screen/processed_weights/splicing_weights/",trait,"/",trait,"_",tissues,".finemap_regions_res.RDS"))
-
-ctwas_genes <- data.frame()
-for(i in ctwasfs){
-  ctwas_genes <- rbind(ctwas_genes,get_top_genes_ctwas(i,region_singals))
-}
-
-
-runtag = "IBD"
-outputdir = "/project/xinhe/shengqian/cTWAS_analysis/data/IBD_coloc//"
-weight_tags <- paste0("weight",1:10)
-colocfs <- paste0(outputdir, runtag, "_",weight_tags, ".coloc_res.RDS")
-
-coloc_genes <- rbind(get_top_genes_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_genes_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_genes_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_genes_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_genes_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_genes_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_genes_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_genes_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_genes_coloc(colocfs[9], paste0(tissues[5],"_eQTL")),
-                     get_top_genes_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-
-coloc_eQTL_genes <- rbind(get_top_genes_coloc(colocfs[1], paste0(tissues[1],"_eQTL")),
-                     get_top_genes_coloc(colocfs[3], paste0(tissues[2],"_eQTL")),
-                     get_top_genes_coloc(colocfs[5], paste0(tissues[3],"_eQTL")),
-                     get_top_genes_coloc(colocfs[7], paste0(tissues[4],"_eQTL")),
-                     get_top_genes_coloc(colocfs[9], paste0(tissues[5],"_eQTL")))
-
-#dim(coloc_eQTL_genes[coloc_eQTL_genes$PP4>0.8,])[1]
-
-coloc_sQTL_genes <- rbind(get_top_genes_coloc(colocfs[2], paste0(tissues[1],"_sQTL")),
-                     get_top_genes_coloc(colocfs[4], paste0(tissues[2],"_sQTL")),
-                     get_top_genes_coloc(colocfs[6], paste0(tissues[3],"_sQTL")),
-                     get_top_genes_coloc(colocfs[8], paste0(tissues[4],"_sQTL")),
-                     get_top_genes_coloc(colocfs[10],paste0(tissues[5],"_sQTL")))
-
-#dim(coloc_sQTL_genes[coloc_sQTL_genes$PP4>0.8,])[1]
-
-finemap_res <- readRDS("/project/xinhe/shengqian/ctwas_GWAS_analysis/results/IBD-ebi-a-GCST004131/IBD-ebi-a-GCST004131.finemap_regions_res.RDS")
-finemap_res <- finemap_res$finemap_res
-finemap_res <- finemap_res[finemap_res$id %in% coloc_genes$id,]
-finemap_res <- merge(finemap_res,coloc_genes,by = "id")
-finemap_res <- finemap_res[(finemap_res$susie_pip>0.8 | finemap_res$PP4>0.8),]
-finemap_res$susie_pip <- round(finemap_res$susie_pip,4)
-finemap_res$PP4 <- round(finemap_res$PP4,4)
-finemap_res <- finemap_res[order(finemap_res$region_id),]
-finemap_res <- finemap_res[,c("id","region_id","susie_pip","cs","PP4","causalSNP")]
-
-num_multi_ctwas_genes <- dim(finemap_res[finemap_res$susie_pip>0.8 & finemap_res$cs!=0,])[1]
-num_single_ctwas_genes <- dim(ctwas_genes)[1]
-num_coloc_genes <- dim(finemap_res[finemap_res$PP4>0.8,])[1]
-
-hist(as.vector(table(finemap_res[finemap_res$PP4>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "coloc",ylim = c(0,15),xlim = c(0,5),breaks = 2)
-hist(as.vector(table(finemap_res[finemap_res$susie_pip>0.8,]$region_id)), xlab ="number of molecular traits in a locus", main = "multi-ctwas",add=TRUE,col='red',breaks = 2)
-```
-
