--- a/analysis/real_data_coloc.Rmd
+++ b/analysis/real_data_coloc.Rmd
@@ -155,7 +155,7 @@ get_results <- function(gwas_id,gwas_name){
 ```
 
 
-```{r echo=FALSE}
+```{r, message=FALSE, echo=FALSE}
 LDL_results <- get_results("LDL-ukb-d-30780_irnt","LDL")
 WBC_results <- get_results("WBC-ieu-b-30","WBC")
 SBP_results <- get_results("SBP-ukb-a-360","SBP")
