--- a/analysis/simulation_null_weight_summary.Rmd
+++ b/analysis/simulation_null_weight_summary.Rmd
@@ -6,7 +6,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r}
+```{r, echo=FALSE, message=FALSE}
 library(ctwas)
 library(tidyr)
 library(dplyr)
